# ROS2-Firefly-Swarm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: firefly.launch.py
plugins/: CMakeCache.txt  CMakeLists.txt  FireflyLED.cc  FireflyLED.hh  Makefile  README.md  cmake_install.cmake  firefly_led_plugin.sdf
plugins/firefly_led/: FireflyLED.cc  FireflyLED.hh  README.md  firefly_led_plugin.sdf
src/: camera_sub.cpp  firefly.cpp
worlds/: model.sdf  swarm_world.sdf
worlds/turtlefly/: model.config  turtlefly.sdf
